src/antlr/JSONParser.ts
// Generated from JSON.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import JSONListener from "./JSONListener.js";
import JSONVisitor from "./JSONVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class JSONParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly START_BLOCK_2 = 10;
	public static readonly ELSE_BLOCK_2 = 11;
	public static readonly END_BLOCK_2 = 12;
	public static readonly L_OPERATOR_2 = 13;
	public static readonly R_OPERATOR_2 = 14;
	public static readonly T_EXPRESSION = 15;
	public static readonly STRING = 16;
	public static readonly NUMBER = 17;
	public static readonly WS = 18;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_json = 0;
	public static readonly RULE_obj = 1;
	public static readonly RULE_objPair = 2;
	public static readonly RULE_pair = 3;
	public static readonly RULE_templateOperatorPair = 4;
	public static readonly RULE_pairValue = 5;
	public static readonly RULE_arr = 6;
	public static readonly RULE_templateOperatorValue = 7;
	public static readonly RULE_value = 8;
	public static readonly literalNames: (string | null)[] = [ null, "'{'", 
                                                            "','", "'}'", 
                                                            "':'", "'['", 
                                                            "']'", "'true'", 
                                                            "'false'", "'null'", 
                                                            null, null, 
                                                            null, "'{{'", 
                                                            "'}}'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "START_BLOCK_2", 
                                                             "ELSE_BLOCK_2", 
                                                             "END_BLOCK_2", 
                                                             "L_OPERATOR_2", 
                                                             "R_OPERATOR_2", 
                                                             "T_EXPRESSION", 
                                                             "STRING", "NUMBER", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"json", "obj", "objPair", "pair", "templateOperatorPair", "pairValue", 
		"arr", "templateOperatorValue", "value",
	];
	public get grammarFileName(): string { return "JSON.g4"; }
	public get literalNames(): (string | null)[] { return JSONParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return JSONParser.symbolicNames; }
	public get ruleNames(): string[] { return JSONParser.ruleNames; }
	public get serializedATN(): number[] { return JSONParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, JSONParser._ATN, JSONParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public json(): JsonContext {
		let localctx: JsonContext = new JsonContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, JSONParser.RULE_json);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 18;
			this.value();
			this.state = 19;
			this.match(JSONParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public obj(): ObjContext {
		let localctx: ObjContext = new ObjContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, JSONParser.RULE_obj);
		let _la: number;
		try {
			this.state = 34;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 21;
				this.match(JSONParser.T__0);
				this.state = 22;
				this.pair();
				this.state = 27;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===2) {
					{
					{
					this.state = 23;
					this.match(JSONParser.T__1);
					this.state = 24;
					this.pair();
					}
					}
					this.state = 29;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 30;
				this.match(JSONParser.T__2);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 32;
				this.match(JSONParser.T__0);
				this.state = 33;
				this.match(JSONParser.T__2);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public objPair(): ObjPairContext {
		let localctx: ObjPairContext = new ObjPairContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, JSONParser.RULE_objPair);
		try {
			this.state = 38;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 16:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 36;
				this.pair();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 37;
				this.templateOperatorPair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pair(): PairContext {
		let localctx: PairContext = new PairContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, JSONParser.RULE_pair);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 40;
			this.match(JSONParser.STRING);
			this.state = 41;
			this.match(JSONParser.T__3);
			this.state = 42;
			this.pairValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public templateOperatorPair(): TemplateOperatorPairContext {
		let localctx: TemplateOperatorPairContext = new TemplateOperatorPairContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, JSONParser.RULE_templateOperatorPair);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 44;
			this.match(JSONParser.START_BLOCK_2);
			this.state = 45;
			this.pair();
			this.state = 46;
			this.match(JSONParser.END_BLOCK_2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pairValue(): PairValueContext {
		let localctx: PairValueContext = new PairValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, JSONParser.RULE_pairValue);
		try {
			this.state = 50;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 48;
				this.templateOperatorValue();
				}
				break;
			case 1:
			case 5:
			case 7:
			case 8:
			case 9:
			case 16:
			case 17:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 49;
				this.value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arr(): ArrContext {
		let localctx: ArrContext = new ArrContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, JSONParser.RULE_arr);
		let _la: number;
		try {
			this.state = 65;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 52;
				this.match(JSONParser.T__4);
				this.state = 53;
				this.value();
				this.state = 58;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===2) {
					{
					{
					this.state = 54;
					this.match(JSONParser.T__1);
					this.state = 55;
					this.value();
					}
					}
					this.state = 60;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 61;
				this.match(JSONParser.T__5);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 63;
				this.match(JSONParser.T__4);
				this.state = 64;
				this.match(JSONParser.T__5);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public templateOperatorValue(): TemplateOperatorValueContext {
		let localctx: TemplateOperatorValueContext = new TemplateOperatorValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, JSONParser.RULE_templateOperatorValue);
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 67;
				this.match(JSONParser.START_BLOCK_2);
				this.state = 68;
				this.value();
				this.state = 69;
				this.match(JSONParser.ELSE_BLOCK_2);
				this.state = 70;
				this.value();
				this.state = 71;
				this.match(JSONParser.END_BLOCK_2);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 73;
				this.match(JSONParser.START_BLOCK_2);
				this.state = 74;
				this.value();
				this.state = 75;
				this.match(JSONParser.END_BLOCK_2);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, JSONParser.RULE_value);
		try {
			this.state = 86;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 16:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 79;
				this.match(JSONParser.STRING);
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 80;
				this.match(JSONParser.NUMBER);
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 81;
				this.obj();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 82;
				this.arr();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 83;
				this.match(JSONParser.T__6);
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 84;
				this.match(JSONParser.T__7);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 85;
				this.match(JSONParser.T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!JSONParser.__ATN) {
			JSONParser.__ATN = new ATNDeserializer().deserialize(JSONParser._serializedATN);
		}

		return JSONParser.__ATN;
	}


	static DecisionsToDFA = JSONParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class JsonContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(JSONParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_json;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterJson) {
	 		listener.enterJson(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitJson) {
	 		listener.exitJson(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitJson) {
			return visitor.visitJson(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ObjContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public pair_list(): PairContext[] {
		return this.getTypedRuleContexts(PairContext) as PairContext[];
	}
	public pair(i: number): PairContext {
		return this.getTypedRuleContext(PairContext, i) as PairContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_obj;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterObj) {
	 		listener.enterObj(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitObj) {
	 		listener.exitObj(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitObj) {
			return visitor.visitObj(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ObjPairContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public pair(): PairContext {
		return this.getTypedRuleContext(PairContext, 0) as PairContext;
	}
	public templateOperatorPair(): TemplateOperatorPairContext {
		return this.getTypedRuleContext(TemplateOperatorPairContext, 0) as TemplateOperatorPairContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_objPair;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterObjPair) {
	 		listener.enterObjPair(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitObjPair) {
	 		listener.exitObjPair(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitObjPair) {
			return visitor.visitObjPair(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PairContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public STRING(): TerminalNode {
		return this.getToken(JSONParser.STRING, 0);
	}
	public pairValue(): PairValueContext {
		return this.getTypedRuleContext(PairValueContext, 0) as PairValueContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_pair;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterPair) {
	 		listener.enterPair(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitPair) {
	 		listener.exitPair(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitPair) {
			return visitor.visitPair(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TemplateOperatorPairContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public START_BLOCK_2(): TerminalNode {
		return this.getToken(JSONParser.START_BLOCK_2, 0);
	}
	public pair(): PairContext {
		return this.getTypedRuleContext(PairContext, 0) as PairContext;
	}
	public END_BLOCK_2(): TerminalNode {
		return this.getToken(JSONParser.END_BLOCK_2, 0);
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_templateOperatorPair;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterTemplateOperatorPair) {
	 		listener.enterTemplateOperatorPair(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitTemplateOperatorPair) {
	 		listener.exitTemplateOperatorPair(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitTemplateOperatorPair) {
			return visitor.visitTemplateOperatorPair(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PairValueContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public templateOperatorValue(): TemplateOperatorValueContext {
		return this.getTypedRuleContext(TemplateOperatorValueContext, 0) as TemplateOperatorValueContext;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_pairValue;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterPairValue) {
	 		listener.enterPairValue(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitPairValue) {
	 		listener.exitPairValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitPairValue) {
			return visitor.visitPairValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArrContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value_list(): ValueContext[] {
		return this.getTypedRuleContexts(ValueContext) as ValueContext[];
	}
	public value(i: number): ValueContext {
		return this.getTypedRuleContext(ValueContext, i) as ValueContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_arr;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterArr) {
	 		listener.enterArr(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitArr) {
	 		listener.exitArr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitArr) {
			return visitor.visitArr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TemplateOperatorValueContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public START_BLOCK_2(): TerminalNode {
		return this.getToken(JSONParser.START_BLOCK_2, 0);
	}
	public value_list(): ValueContext[] {
		return this.getTypedRuleContexts(ValueContext) as ValueContext[];
	}
	public value(i: number): ValueContext {
		return this.getTypedRuleContext(ValueContext, i) as ValueContext;
	}
	public ELSE_BLOCK_2(): TerminalNode {
		return this.getToken(JSONParser.ELSE_BLOCK_2, 0);
	}
	public END_BLOCK_2(): TerminalNode {
		return this.getToken(JSONParser.END_BLOCK_2, 0);
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_templateOperatorValue;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterTemplateOperatorValue) {
	 		listener.enterTemplateOperatorValue(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitTemplateOperatorValue) {
	 		listener.exitTemplateOperatorValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitTemplateOperatorValue) {
			return visitor.visitTemplateOperatorValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ValueContext extends ParserRuleContext {
	constructor(parser?: JSONParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public STRING(): TerminalNode {
		return this.getToken(JSONParser.STRING, 0);
	}
	public NUMBER(): TerminalNode {
		return this.getToken(JSONParser.NUMBER, 0);
	}
	public obj(): ObjContext {
		return this.getTypedRuleContext(ObjContext, 0) as ObjContext;
	}
	public arr(): ArrContext {
		return this.getTypedRuleContext(ArrContext, 0) as ArrContext;
	}
    public get ruleIndex(): number {
    	return JSONParser.RULE_value;
	}
	public enterRule(listener: JSONListener): void {
	    if(listener.enterValue) {
	 		listener.enterValue(this);
		}
	}
	public exitRule(listener: JSONListener): void {
	    if(listener.exitValue) {
	 		listener.exitValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JSONVisitor<Result>): Result {
		if (visitor.visitValue) {
			return visitor.visitValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
